--- a/acercade.html
+++ b/acercade.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProdArt</title>
+    <title>ProdArt-A cerca de</title>
     <!-- iconos-->
     <link rel="apple-touch-icon" href="assets/img/">
     <!-- css-->
@@ -13,8 +13,8 @@
      <link rel="stylesheet" href="assets/css/fontawesome.min.css">
 </head>
 <body>
-    <!-- inicio encabezado-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-light" id="templatemo_nav_top">
+        <!-- inicio encabezado-->
+        <nav class="navbar navbar-expand-lg bg-dark navbar-light" id="templatemo_nav_top">
             <div class="container text-light">
                 <div class="w-100 d-flex justify-content-between">
                     <div>
@@ -32,13 +32,13 @@
     
             </div>
         </nav>
-    <!-- fin encabezado-->
-    <!-- inicio menu-->
-     <nav class="navbar navbar-expand-lg navbar-light shadow">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="container d-flex justify-content-between align-items-center">
+        <!-- fin encabezado-->
+         <!-- inicio menu-->
+         <nav class="navbar navbar-expand-lg navbar-light shadow">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container d-flex justify-content-between align-items-center">
                 <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
                     JC TECHNOLOGY
                 </a>
@@ -59,17 +59,45 @@
                     </ul>
                 </div>
             </div>
+    
+         </nav>
+    <!-- fin menu-->
+        <!-- inicio a cerca de-->
+        <section class="bg-success py-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-8 text-white">
+                        <h1>Quienes somos</h1>
+                        <p>
+                        En JC TECHNOLOGY,  nos especializamos en ofrecer soluciones tecnológicas innovadoras para un mundo en constante evolución. Nuestro catálogo incluye dispositivos de última generación, gadgets inteligentes y herramientas digitales diseñadas para mejorar la vida cotidiana y profesional de nuestros clientes. Cada producto ha sido seleccionado por su calidad, funcionalidad y capacidad para transformar la manera en que interactuamos con la tecnología.
+                </p>
+                <h1>Misión</h1>
+                <p>
+                    Nuestra misión es democratizar el acceso a la tecnología avanzada, brindando productos confiables, accesibles y sostenibles. Buscamos empoderar a las personas a través de la tecnología, ayudándolas a ser más productivas, conectadas y creativas.
+                </p>
+                <h1>Visión</h1>
+                <p>
+                    Aspiramos a convertirnos en la plataforma líder en distribución de productos tecnológicos en Latinoamérica, reconocida por su innovación, servicio al cliente y compromiso con el desarrollo digital. Queremos ser el vínculo que conecta a las personas con el futuro.
+                </p>
+                <h1>Objetivos</h1>
+                <p>
+                    1. Promover la innovación: Ofrecer productos tecnológicos de vanguardia que respondan a las necesidades actuales del mercado.
+                    <br>2. Garantizar accesibilidad: Facilitar el acceso a la tecnología a través de precios competitivos y opciones de compra flexibles.
+                    <br>3. Mejorar la experiencia del usuario: Diseñar una plataforma intuitiva y segura que haga de cada compra una experiencia eficiente y satisfactoria.
+                    <br>4. Educación tecnológica: Informar y capacitar a los usuarios sobre el uso adecuado de la tecnología para maximizar sus beneficios.
+                    <br>5. Expansión sostenible: Ampliar nuestra oferta de productos y servicios con un enfoque en la sostenibilidad y la responsabilidad social.
+                </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="logo.jpg" width="344">
+                    </div>
 
-     </nav>
-<!-- fin menu-->
+                </div>
+            </div>
+        </section>
 
-
-    <!-- inicio secciones-->
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-     <!-- fin secciones-->
-
-    <!-- inicio de pie-->
+        <!-- fin a cerca de-->
+        <!-- inicio de pie-->
     <footer class="bg-dark" id="templatemo_footer">
         <div class="container">
             <div class="row">
@@ -154,6 +182,9 @@
     <!-- fin de pie-->
     <!-- archivos js-->
      <script src="assets/js/bootstrap.bundle.min.js"></script>
-
+     <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
+     <script src="assets/js/jquery-1.11.0.min.js"></script>
+     <script src="assets/js/templatemo.js"></script>
+     <script src="assets/js/custom.js"></script>
 </body>
 </html>
